more progress on this garbage

--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -13,7 +13,7 @@
 --unnamed-color-6cc24a: #6CC24A;
 
 /* Font/text values */
---unnamed-font-family-museo: MuseoModerno;
+--unnamed-font-family-museo: Museo;
 --unnamed-font-family-poppins: Poppins;
 --unnamed-font-style-normal: normal;
 --unnamed-font-weight-300: 300px;
