--- a/src/scss/landing-page.scss
+++ b/src/scss/landing-page.scss
@@ -117,6 +117,7 @@ html, body {
     color: #FFFFFF;
     text-transform: uppercase;
     text-decoration: none;
+    text-align: center;
 }
 
 .benefits {
@@ -145,12 +146,33 @@ html, body {
     }
 }
 
+@media screen and (max-width: 720px) {
+    .section-heading__title {
+        margin: 0 auto;
+    }
+}
+
 .benefits__body {
     margin: 41px 0 0;
     display: grid; 
     grid-auto-rows: auto; 
     grid-template-columns: auto 1fr; 
     gap: 103px; 
+}
+
+@media screen and (max-width: 1200px) {
+
+    .section-heading__title {
+        font: normal normal normal 30px/32px Museo;
+    }
+
+    .benefits__body {
+        display: block;
+    }
+
+    .benefits__list {
+        margin: 103px 0 0;
+    }
 }
 
 .benefits__media {
@@ -244,13 +266,19 @@ html, body {
     }
 }
 
+@media screen and (max-width: 1160px) {
+    .benefits__note {
+        padding: 60px;
+    }
+}
+
 .downloads {
     background: transparent linear-gradient(238deg, #0097B264 0%, #28C2DE9A 43%, #9CEAD1DC 86%, var(--unnamed-color-daffca) 100%) 0% 0% no-repeat padding-box;
 }
 
 .partners {
     background: #DAFFCA41;
-    padding: 102px 0 145px;
+    padding: 102px 20px 145px;
 }
 
 .partners__inner {
@@ -291,6 +319,27 @@ html, body {
     opacity: 1;
 }
 
+@media screen and (max-width: 1000px) {
+
+    .partners__inner {
+        display: block;
+        text-align: center;
+
+        .section-heading__title {
+            text-align: center;
+        }
+    }
+
+    .partners__media {
+        display: block;
+            margin: 0 auto;
+        img {
+            display: block;
+            margin: 0 auto;
+        }
+    }
+}
+
 .floating__logo--move-it {
     position: absolute;
     left: 50%;
@@ -318,7 +367,7 @@ html, body {
 .where-help__inner {
     max-width: 1200px;
     margin: 0 auto;
-    padding: 155px 0 110px;
+    padding: 155px 20px 110px;
     box-sizing: border-box;
 }
 
@@ -330,6 +379,18 @@ html, body {
     grid-auto-rows: auto; 
     grid-template-columns: 1fr 1fr; 
     gap: 20px; 
+}
+
+@media screen and (max-width: 1000px) {
+    .where-help__inner {
+        .section-heading__title {
+            font: normal normal normal 24px/30px Museo;
+        }
+    }
+
+    .where-help__grid {
+        grid-template-columns: 1fr; 
+    }
 }
 
 .where-card {
@@ -398,7 +459,7 @@ html, body {
 .videos__inner {
     max-width: 1200px;
     margin: 0 auto;
-    padding: 140px 0 127px;
+    padding: 140px 20px 127px;
 }
 
 .videos__grid {
@@ -445,6 +506,32 @@ html, body {
     margin: 34px auto 0;
 }
 
+@media screen and (max-width: 1000px) {
+    .videos {
+        .section-heading__title {
+            font: normal normal normal 30px/34px Museo;
+            padding: 0;
+            margin: 0 auto;
+        }
+    }
+}
+
+@media screen and (max-width: 1161px) {
+    .videos__grid {
+        grid-template-columns: 1fr 1fr; 
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .videos__grid {
+        grid-template-columns: 1fr; 
+    }
+
+    .video-card__title {
+        max-width: 100%;
+    }
+}
+
 .landing-page-footer {
     background: #0097B265;
     margin: 0;
@@ -453,6 +540,17 @@ html, body {
 
 .footer__top {
     padding: 118px;
+}
+
+.footer__logo {
+    max-width: 100%;
+    height: auto;
+}
+
+@media screen and (max-width: 1000px) {
+    .footer__top {
+        padding: 60px;
+    }
 }
 
 .landing-page-footer__inner {
@@ -500,6 +598,14 @@ html, body {
     a {
         color: inherit;
         text-decoration: none;
+    }
+}
+
+@media screen and (max-width: 720px) {
+    .footer__menu {
+        grid-template-columns: 1fr; 
+        grid-template-areas: 
+            ".";
     }
 }
 
@@ -559,6 +665,16 @@ html, body {
     }
 }
 
+@media screen and (max-width: 720px) {
+    .footer__associations-item {
+        & + .footer__associations-item {
+            &:before {
+                content: unset;
+            }
+        }
+    }
+}
+
 .footer__social {
     display: flex;
     flex-direction: row;
@@ -570,9 +686,6 @@ html, body {
     font-size: 32px;
     color: #fff;
 }
-
-
-
 
 .downloads {
     padding: 115px 22px 110px;
@@ -686,7 +799,6 @@ html, body {
 
 .download-card__body {
     flex: 1 0 auto;
-    
     padding: 0 110px 0 61px;
 }
 
@@ -697,4 +809,81 @@ html, body {
     font: normal normal normal 32px/38px Museo;
     letter-spacing: 0px;
     color: #454851;
+}
+
+@media screen and (max-width: 900px) {
+    .download-card__body {
+        flex: 1 1 auto;
+        padding: 60px;
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    .download-card__body {
+        flex: 1 1 auto;
+        padding: 60px;
+    }
+
+    .download-card {
+        &:nth-child(even) {
+            transform: translateX(0);
+
+            .download-card__thumb {
+                order: unset;
+            }
+
+            .download-card__body {
+                padding: 0 60px;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 720px) {
+    .download-card__thumb {
+        margin: 60px auto 0;
+        height: auto;
+        width: 80%;
+        box-sizing: border-box;
+    }
+    
+    .download-card__title {
+        font: normal normal normal 18px/22px Museo;
+        text-align: center;
+    }
+
+    .download-card {
+        display: block;
+        height: auto;
+
+        &:nth-child(even) {
+            .download-card__thumb {
+                order: unset;
+            }
+
+            .download-card__body {
+                padding: 60px;
+            }
+        }
+    }
+
+    .download-card__body {
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 720px) {
+    .footer__associations-list {
+        flex-wrap: wrap;
+    }
+
+    .footer__bottom {
+        .landing-page-footer__inner {
+            display: block;
+        }
+    }
+
+    .footer__social {
+        margin: 60px 0 0;
+    }
 }
